<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <!-- 댓글 아이템 -->
    <ImageView
        android:id="@+id/comment_item_profile_imageview"
        android:layout_margin="7.5dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/profile" />

    <TextView
        android:id="@+id/comment_item_profile_textview"
        android:text="@string/user_id"
        android:textStyle="bold"
        android:layout_margin="7.5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/comment_item_comment_textview"
        android:text="@string/comment_message"
        android:layout_margin="7.5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>